Terminal Redirect Last Update

--- a/Terminal-Redirect.html
+++ b/Terminal-Redirect.html
@@ -1,9 +1,9 @@
 <head>
-<title>Welcome</title>
+<title>Terminal | Welcome</title>
 <meta name="Description" content="Conteúdo educativo de Tecnologia e Hacking">
 <meta name="keywords" content="matheuslaidler,matheus,laidler,vidal,laidlervidal,seclab,security,tecnologia,technology,educação,cursos,aulas,tutoriais,writeups,ctfs,wargames,segurança da informação,hacking,hack,cyber security,capture the flag,tecnologia da informação,ti,linux,terminal,console,artigos,artigos de tecnologia,artigos de segurança,novidades,pdfs,livros,conteúdo,conteudo,mercado de ti,mercado de segurança da informação,pentest,hacker ético,ethical hacking,whitehat,manual">
 <meta http-equiv="refresh" content="2;seclab.html" />
-<link rel="icon" class="favicon" href="public/favicon.ico" />
+<link rel="icon" class="favicon" href="favicon.ico" />
 </head>
 <style type="text/css">
   @import 'http://fonts.googleapis.com/css?family=Pacifico';
@@ -118,7 +118,7 @@ root@kali:~# </p>
 
   <meta http-equiv="imagetoolbar" content="no" />
   <script type="text/javascript">
-                  //bloqueando menu
+                  //bloqueando menu test
     function desabilitaMenu(e){
       if (window.Event){
       if (e.which == 2 || e.which == 3)
