--- a/MeuTerminal Botao.html
+++ b/MeuTerminal Botao.html
@@ -1,8 +1,9 @@
 <head>
-<title>Welcome</title>
+<title>Terminal | Welcome</title>
 <meta name="Description" content="Conteúdo educativo de Tecnologia e Hacking">
 <meta name="keywords" content="matheuslaidler,matheus,laidler,vidal,laidlervidal,seclab,security,tecnologia,technology,educação,cursos,aulas,tutoriais,writeups,ctfs,wargames,segurança da informação,hacking,hack,cyber security,capture the flag,tecnologia da informação,ti,linux,terminal,console,artigos,artigos de tecnologia,artigos de segurança,novidades,pdfs,livros,conteúdo,conteudo,mercado de ti,mercado de segurança da informação,pentest,hacker ético,ethical hacking,whitehat,manual">
-<link rel="icon" class="favicon" href="favicon.png" />
+<meta http-equiv="refresh" content="2;seclab.html" />
+<link rel="icon" class="favicon" href="favicon.ico" />
 </head>
 <style type="text/css">
   @import 'http://fonts.googleapis.com/css?family=Pacifico';
@@ -22,7 +23,7 @@ body{
         border-left:2px solid #402626;
         border-top:35px solid #402626;
         border-radius:1%;
-        margin-top:8px;
+        margin-top:30px;
         background:black;
         position:absolute;
         display:block;
@@ -93,7 +94,8 @@ root@kali:~# </p>
 firefox www.matheuslaidler.github.io</p>
 <p>Entrando...</p>
 <p>Acesso garantido para o melhor site de educação tecnológica e segurança da informação. </p>
-<p>Matheus Laidler></p>
+<p>Created by Matheus Laidler</p>
+<p class="passwd"> SecLab> </p>
 <pre class="banner">
   <code>
                                                                                                        __
@@ -106,18 +108,18 @@ firefox www.matheuslaidler.github.io</p>
       BB    BB EE       MM           MM        VVVVVV        II  NN      NN  NN DD  DD   OO     OO     || 
       BB  BB   EEEEEEE  MM           MM         VVVV         II  NN       NN NN DD DD     OO   OO      ||
       BBBB     EEEEEEEE MM           MM          VV         IIII NN         NNN DDDD       OOOOO      ({}) 
-                                              
+                                                        
     </code>
  </pre>
-         <center><a href="index.html"><img src="button.png" class="button"/></a></center>
+   <center><a href="index.html"><img src="button.png" class="button"/></a></center>
 <p class="texto">
-root@kali:~#</p>
+root@kali:~# </p>
 </section>
 </header>
 
   <meta http-equiv="imagetoolbar" content="no" />
   <script type="text/javascript">
-                  //bloqueando menu
+                  //bloqueando menu test
     function desabilitaMenu(e){
       if (window.Event){
       if (e.which == 2 || e.which == 3)
