--- a/Terminal-Button.html
+++ b/Terminal-Button.html
@@ -2,7 +2,6 @@
 <title>Terminal | Welcome</title>
 <meta name="Description" content="Conteúdo educativo de Tecnologia e Hacking">
 <meta name="keywords" content="matheuslaidler,matheus,laidler,vidal,laidlervidal,seclab,security,tecnologia,technology,educação,cursos,aulas,tutoriais,writeups,ctfs,wargames,segurança da informação,hacking,hack,cyber security,capture the flag,tecnologia da informação,ti,linux,terminal,console,artigos,artigos de tecnologia,artigos de segurança,novidades,pdfs,livros,conteúdo,conteudo,mercado de ti,mercado de segurança da informação,pentest,hacker ético,ethical hacking,whitehat,manual">
-<meta http-equiv="refresh" content="2;seclab.html" />
 <link rel="icon" class="favicon" href="favicon.ico" />
 </head>
 <style type="text/css">
@@ -14,7 +13,7 @@ body{
       overflow-y:hidden;
       overflow-x:hidden;
       background-image:url(https://i.pinimg.com/originals/99/bc/db/99bcdb85853f9d3f1e1d734cb1dcd86b.jpg);
-      
+
     }
      #terminal{
       top:0px;
@@ -33,10 +32,16 @@ body{
         opacity:0.85;
         padding-bottom:134px;
     }
+    .kali{
+      margin-top:4px;
+        font-size:15pt;
+        color:#0490c7;
+        margin-left:10px;
+    }
     .texto{
       margin-top:4px;
         font-size:15pt;
-        color:#800000;
+        color:#c70404;
         margin-left:10px;
     }
     .text{
@@ -82,8 +87,8 @@ body{
 <header id="todo">
 <section id="terminal">
 <p class="top">
-Terminal - root@kali</p>
-<p class="texto">
+root@kali:~</p>
+<p class="kali">
 kali@kali:~$ </p>
 <p class="text">
 sudo su</p>
@@ -99,19 +104,19 @@ firefox www.matheuslaidler.github.io</p>
 <pre class="banner">
   <code>
                                                                                                        __
-      BBBB     EEEEEEEE MMMM       MMMM  VVV            VVV IIII NNN         NN DDDD       OOOOO       || 
-      BB  BB   EEEEEEE  MM MM     MM MM   VVV          VVV   II  NN NN       NN DD DD     OO   OO      || 
-      BB    BB EE       MM  MM   MM  MM    VVV        VVV    II  NN  NN      NN DD  DD   OO     OO     || 
-      BB   BB  EE       MM   MM MM   MM     VVV      VVV     II  NN   NN     NN DD   DD OO       OO    || 
-      BBBB     EEEEEEE  MM     M     MM      VVV    VVV      II  NN    NN    NN DD    D OO       OO    || 
-      BB  BB   EE       MM           MM       VVV  VVV       II  NN     NN   NN DD   DD OO       OO    || 
-      BB    BB EE       MM           MM        VVVVVV        II  NN      NN  NN DD  DD   OO     OO     || 
+      BBBB     EEEEEEEE MMMM       MMMM  VVV            VVV IIII NNN         NN DDDD       OOOOO       ||
+      BB  BB   EEEEEEE  MM MM     MM MM   VVV          VVV   II  NN NN       NN DD DD     OO   OO      ||
+      BB    BB EE       MM  MM   MM  MM    VVV        VVV    II  NN  NN      NN DD  DD   OO     OO     ||
+      BB   BB  EE       MM   MM MM   MM     VVV      VVV     II  NN   NN     NN DD   DD OO       OO    ||
+      BBBB     EEEEEEE  MM     M     MM      VVV    VVV      II  NN    NN    NN DD    D OO       OO    ||
+      BB  BB   EE       MM           MM       VVV  VVV       II  NN     NN   NN DD   DD OO       OO    ||
+      BB    BB EE       MM           MM        VVVVVV        II  NN      NN  NN DD  DD   OO     OO     ||
       BB  BB   EEEEEEE  MM           MM         VVVV         II  NN       NN NN DD DD     OO   OO      ||
-      BBBB     EEEEEEEE MM           MM          VV         IIII NN         NNN DDDD       OOOOO      ({}) 
-                                                        
+      BBBB     EEEEEEEE MM           MM          VV         IIII NN         NNN DDDD       OOOOO      ({})
+
     </code>
  </pre>
-   <center><a href="index.html"><img src="button.png" class="button"/></a></center>
+ <center><a href="index.html"><img src="button.png" class="button"/></a></center>
 <p class="texto">
 root@kali:~# </p>
 </section>
