--- a/Terminal-Redirect.html
+++ b/Terminal-Redirect.html
@@ -14,7 +14,7 @@ body{
       overflow-y:hidden;
       overflow-x:hidden;
       background-image:url(https://i.pinimg.com/originals/99/bc/db/99bcdb85853f9d3f1e1d734cb1dcd86b.jpg);
-      
+
     }
      #terminal{
       top:0px;
@@ -33,10 +33,16 @@ body{
         opacity:0.85;
         padding-bottom:134px;
     }
+    .kali{
+      margin-top:4px;
+        font-size:15pt;
+        color:#0490c7;
+        margin-left:10px;
+    }
     .texto{
       margin-top:4px;
         font-size:15pt;
-        color:#800000;
+        color:#c70404;
         margin-left:10px;
     }
     .text{
@@ -82,8 +88,8 @@ body{
 <header id="todo">
 <section id="terminal">
 <p class="top">
-Terminal - root@kali</p>
-<p class="texto">
+root@kali:~</p>
+<p class="kali">
 kali@kali:~$ </p>
 <p class="text">
 sudo su</p>
@@ -99,16 +105,16 @@ firefox www.matheuslaidler.github.io</p>
 <pre class="banner">
   <code>
                                                                                                        __
-      BBBB     EEEEEEEE MMMM       MMMM  VVV            VVV IIII NNN         NN DDDD       OOOOO       || 
-      BB  BB   EEEEEEE  MM MM     MM MM   VVV          VVV   II  NN NN       NN DD DD     OO   OO      || 
-      BB    BB EE       MM  MM   MM  MM    VVV        VVV    II  NN  NN      NN DD  DD   OO     OO     || 
-      BB   BB  EE       MM   MM MM   MM     VVV      VVV     II  NN   NN     NN DD   DD OO       OO    || 
-      BBBB     EEEEEEE  MM     M     MM      VVV    VVV      II  NN    NN    NN DD    D OO       OO    || 
-      BB  BB   EE       MM           MM       VVV  VVV       II  NN     NN   NN DD   DD OO       OO    || 
-      BB    BB EE       MM           MM        VVVVVV        II  NN      NN  NN DD  DD   OO     OO     || 
+      BBBB     EEEEEEEE MMMM       MMMM  VVV            VVV IIII NNN         NN DDDD       OOOOO       ||
+      BB  BB   EEEEEEE  MM MM     MM MM   VVV          VVV   II  NN NN       NN DD DD     OO   OO      ||
+      BB    BB EE       MM  MM   MM  MM    VVV        VVV    II  NN  NN      NN DD  DD   OO     OO     ||
+      BB   BB  EE       MM   MM MM   MM     VVV      VVV     II  NN   NN     NN DD   DD OO       OO    ||
+      BBBB     EEEEEEE  MM     M     MM      VVV    VVV      II  NN    NN    NN DD    D OO       OO    ||
+      BB  BB   EE       MM           MM       VVV  VVV       II  NN     NN   NN DD   DD OO       OO    ||
+      BB    BB EE       MM           MM        VVVVVV        II  NN      NN  NN DD  DD   OO     OO     ||
       BB  BB   EEEEEEE  MM           MM         VVVV         II  NN       NN NN DD DD     OO   OO      ||
-      BBBB     EEEEEEEE MM           MM          VV         IIII NN         NNN DDDD       OOOOO      ({}) 
-                                                        
+      BBBB     EEEEEEEE MM           MM          VV         IIII NN         NNN DDDD       OOOOO      ({})
+
     </code>
  </pre>
 <p class="texto">
