--- a/Terminal-Redirect.html
+++ b/Terminal-Redirect.html
@@ -93,7 +93,7 @@ root@kali:~</p>
 kali@kali:~$ </p>
 <p class="text">
 sudo su</p>
-<p class="passwd">Password:</p>
+<p class="passwd">[sudo] password for kali:</p>
 <p class="texto">
 root@kali:~# </p>
 <p class="text">
