--- a/Terminal-Redirect.html
+++ b/Terminal-Redirect.html
@@ -2,7 +2,7 @@
 <title>Terminal | Welcome</title>
 <meta name="Description" content="Conteúdo educativo de Tecnologia e Hacking">
 <meta name="keywords" content="matheuslaidler,matheus,laidler,vidal,laidlervidal,seclab,security,tecnologia,technology,educação,cursos,aulas,tutoriais,writeups,ctfs,wargames,segurança da informação,hacking,hack,cyber security,capture the flag,tecnologia da informação,ti,linux,terminal,console,artigos,artigos de tecnologia,artigos de segurança,novidades,pdfs,livros,conteúdo,conteudo,mercado de ti,mercado de segurança da informação,pentest,hacker ético,ethical hacking,whitehat,manual">
-<meta http-equiv="refresh" content="2;seclab.html" />
+<meta http-equiv="refresh" content="3;/" />
 <link rel="icon" class="favicon" href="favicon.ico" />
 </head>
 <style type="text/css">
