--- a/Terminal-Button.html
+++ b/Terminal-Button.html
@@ -116,7 +116,7 @@ firefox www.matheuslaidler.github.io</p>
 
     </code>
  </pre>
- <center><a href="index.html"><img src="button.png" class="button"/></a></center>
+ <center><a href="/"><img src="button.png" class="button"/></a></center>
 <p class="texto">
 root@kali:~# </p>
 </section>
